fix: removed deprecated `new URL`